fix some layout bugs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,8 +30,7 @@ html,body  {
   padding-top:60px;
 
   .main-content {
-    margin-top:20px;
-    padding-top:10px;
+
   }
 }
 
@@ -95,3 +94,5 @@ footer  {
 .manatee-logo {
   font-family: 'Changa One', cursive;
 }
+
+
